Fix img with div.intro text realign to left

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ div.intro{
     color: #353535;
     margin:0;
     padding:0;
-    text-align:center;
+    text-align:right;
 }
 
 #bio {
